--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./:/app
       - ./templates:/app/templates
+      - ./static:/app/static
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
