added: mistral test implementation

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,4 @@ services:
       - SECRET_KEY=${SECRET_KEY}
       - FLASK_APP=main.py
       - PYTHONUNBUFFERED=1
+      - FIREBASE_CREDENTIALS=${FIREBASE_CREDENTIALS}
